kind-cluster/myapp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
spec:
  containers:
  - name: myapp-container
    image: keneojiteli/student-tracker:latest
    ports:
    - containerPort: 80
